--- a/ZoDreamShop/Views/MemberPage.xaml
+++ b/ZoDreamShop/Views/MemberPage.xaml
@@ -60,8 +60,8 @@
                     <my:IconButton Icon="&#xE719;" Label="订单" Height="40" HasRightBorder="True"/>
                     <my:IconButton Icon="&#xE735;" Label="关注" Grid.Column="1" HasRightBorder="True"/>
                     <my:IconButton Icon="&#xE7E7;" Label="消息" Grid.Column="2" HasRightBorder="True"/>
-                    <my:IconButton Icon="&#xE83D;" Label="安全" Grid.Column="3" HasRightBorder="True"/>
-                    <my:IconButton Icon="&#xE115;" Label="设置" Grid.Column="4"/>
+                    <my:IconButton Icon="&#xE83D;" Label="安全" Tapped="IconButton_Tapped" Grid.Column="3" HasRightBorder="True"/>
+                    <my:IconButton Icon="&#xE115;" Label="设置" Tapped="IconButton_Tapped" Grid.Column="4"/>
                 </Grid>
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -77,7 +77,7 @@
                     <my:IconButton Icon="&#xE8DF;" Height="80" FontSize="30" Label="待评价" Grid.Row="1" HasRightBorder="True"/>
                     <my:IconButton Icon="&#xE7FD;" Height="80" FontSize="30" Label="退换货" Grid.Row="1" Grid.Column="1"/>
                 </Grid>
-                <my:IconMenuItem Icon="&#xE8C7;" Label="我的钱包" Height="40" Background="White"/>
+                <my:IconMenuItem Icon="&#xf151;" Label="我的钱包" Height="40" Background="White"/>
                 <Grid>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -90,11 +90,11 @@
                     <my:NumberButton Label="红包" Grid.Column="2" HasRightBorder="True"/>
                     <my:NumberButton Label="优惠券" Grid.Column="3"/>
                 </Grid>
-                <my:IconMenuItem Icon="&#xE8C7;" Height="40" Background="White" Label="签到" Tapped="IconMenuItem_Tapped" HasBottomBorder="True"/>
-                <my:IconMenuItem Icon="&#xE8C7;" Height="40" Background="White" Label="我的收货地址" HasBottomBorder="True"/>
-                <my:IconMenuItem Icon="&#xE8C7;" Height="40" Background="White" Label="我的足迹" HasBottomBorder="True"/>
-                <my:IconMenuItem Icon="&#xE8C7;" Height="40" Background="White" Label="我的推荐" HasBottomBorder="True"/>
-                <my:IconMenuItem Icon="&#xE8C7;" Height="40" Background="White" Label="帮助"/>
+                <my:IconMenuItem Icon="&#xe647;" Height="40" Background="White" Label="签到" Tapped="IconMenuItem_Tapped" HasBottomBorder="True"/>
+                <my:IconMenuItem Icon="&#xe65d;" Height="40" Background="White" Label="我的收货地址" HasBottomBorder="True"/>
+                <my:IconMenuItem Icon="&#xf015;" Height="40" Background="White" Label="我的足迹" HasBottomBorder="True"/>
+                <my:IconMenuItem Icon="&#xe63f;" Height="40" Background="White" Label="我的推荐" HasBottomBorder="True"/>
+                <my:IconMenuItem Icon="&#xe603;" Height="40" Background="White" Label="帮助"/>
             </StackPanel>
         </ScrollViewer>
     </Grid>
