--- a/ZoDreamShop/Controls/TipMenuItem.xaml
+++ b/ZoDreamShop/Controls/TipMenuItem.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="ZoDream.Shop.Controls.IconMenuItem"
+    x:Class="ZoDream.Shop.Controls.TipMenuItem"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ZoDream.Shop.Controls"
@@ -13,7 +13,6 @@
 
     <Grid Background="{Binding Background, ElementName=root}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="40"/>
             <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition Width="60"/>
@@ -22,10 +21,9 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="1"/>
         </Grid.RowDefinitions>
-        <FontIcon Glyph="{Binding Icon,ElementName=root}" FontFamily="/Resources/iconfont.ttf#iconfont" FontSize="{Binding FontSize,ElementName=root}"/>
-        <TextBlock Text="{Binding Label,ElementName=root}" VerticalAlignment="Center" Grid.Column="1" FontSize="{Binding FontSize,ElementName=root}"/>
-        <TextBlock Text="{Binding Tip,ElementName=root}" VerticalAlignment="Center" Grid.Column="2" FontSize="{Binding FontSize,ElementName=root}"/>
-        <FontIcon Glyph="&#xE76C;" FontFamily="Segoe MDL2 Assets" FontSize="{Binding FontSize,ElementName=root}" Grid.Column="3"/>
-        <Rectangle Grid.Row="1" Grid.ColumnSpan="4" Fill="Black" Margin="10,0" Visibility="{x:Bind converter:ConverterHeler.VisibleIf(HasBottomBorder)}"/>
+        <TextBlock Text="{Binding Label,ElementName=root}" VerticalAlignment="Center" FontSize="{Binding FontSize,ElementName=root}" Margin="10 0"/>
+        <TextBlock Text="{Binding Tip,ElementName=root}" VerticalAlignment="Center" Grid.Column="1" FontSize="{Binding FontSize,ElementName=root}"/>
+        <FontIcon Glyph="&#xE76C;" FontFamily="Segoe MDL2 Assets" FontSize="{Binding FontSize,ElementName=root}" Grid.Column="2"/>
+        <Rectangle Grid.Row="1" Grid.ColumnSpan="3" Fill="Black" Margin="10,0" Visibility="{x:Bind converter:ConverterHeler.VisibleIf(HasBottomBorder)}"/>
     </Grid>
 </UserControl>
