--- a/ZoDreamShop/Views/SettingPage.xaml
+++ b/ZoDreamShop/Views/SettingPage.xaml
@@ -9,30 +9,31 @@
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Grid>
-        <ScrollViewer
-            x:Name="contentSV"
-            IsTabStop="False"
-            UseSystemFocusVisuals="False"
-            VerticalScrollBarVisibility="Auto"
-            VerticalScrollMode="Auto">
-            <StackPanel HorizontalAlignment="Stretch">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="auto"/>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="40"/>
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="80"/>
-                        <RowDefinition Height="1"/>
-                        <RowDefinition Height="40"/>
-                        <RowDefinition Height="1"/>
-                        <RowDefinition Height="40"/>
-                        <RowDefinition Height="1"/>
-                        <RowDefinition Height="40"/>
-                    </Grid.RowDefinitions>
-                </Grid>
-            </StackPanel>
-        </ScrollViewer>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="40"/>
+                <RowDefinition Height="157*"/>
+                <RowDefinition Height="40"/>
+            </Grid.RowDefinitions>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="3*"/>
+                <ColumnDefinition Width="1*"/>
+            </Grid.ColumnDefinitions>
+            <TextBlock Text="系统通知"/>
+            <ToggleSwitch Grid.Column="1" IsOn="True"/>
+            <TextBlock Text="推荐通知" Grid.Row="1"/>
+            <ToggleSwitch Grid.Column="1" Grid.Row="1" IsOn="True"/>
+
+            <Button Content="清除缓存"
+            Grid.Row="4" 
+                Background="#FF9B3232"
+                Grid.ColumnSpan="2"
+                Width="300"
+                HorizontalAlignment="Stretch" 
+                VerticalAlignment="Stretch" 
+                Foreground="White"
+                />
+        </Grid>
     </Grid>
 </Page>
