--- a/ZoDreamShop/Views/Member/ProfilePage.xaml
+++ b/ZoDreamShop/Views/Member/ProfilePage.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="ZoDream.Shop.Views.ProfilePage"
+    x:Class="ZoDream.Shop.Views.Member.ProfilePage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:ZoDream.Shop.Views"
